--- a/GraphQlPlayground.csproj
+++ b/GraphQlPlayground.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="15.0.3" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="15.0.3" />
   </ItemGroup>
 
 </Project>
